--- a/src/index.html.haml
+++ b/src/index.html.haml
@@ -25,7 +25,7 @@
     %body
     %div{:align => "center"}
       %h1 Congratulations!
-      %h2 You have successfully completed the second tutorial for AWS CodePipeline TEST.
+      %h2 You have successfully completed the second tutorial for AWS CodePipeline TEST#2.
       %p
         For next steps, read the
         = succeed "." do
